# Cavendish

./: .gitignore  Cargo.toml  DESIGN.md  MILESTONES.md  README.md
.claude/skills/cavendish-conventions/: SKILL.md
.claude/skills/doc-sync/: SKILL.md
.claude/skills/milestone-workflow/: SKILL.md
.claude/skills/physics-validation/: SKILL.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
cavendish-spec/: cavendish.tex
crates/analysis/: Cargo.toml
crates/analysis/src/: fisher.rs  geometry.rs  jacobian.rs  lib.rs  testkit.rs
crates/compute/: Cargo.toml
crates/compute/src/: forward.wgsl  gpu.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/generate/: Cargo.toml
crates/generate/src/: lib.rs
crates/generate/tests/: anchor_per_detector.rs  anchor_wall.rs  channels.rs  gpu_parity.rs  mesh.rs  motion_anchors.rs  prior.rs  reference_ls.rs  reproducibility.rs  rotation.rs  spectra.rs  stream.rs
crates/gravity/: Cargo.toml
crates/gravity/src/: lib.rs
crates/instrument/: Cargo.toml
crates/instrument/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/noise/: Cargo.toml
crates/noise/src/: lib.rs
crates/reference/: Cargo.toml
crates/reference/src/: lib.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: lib.rs
crates/sdk/: Cargo.toml  pyproject.toml
crates/sdk/src/: lib.rs  py.rs
crates/shape/: Cargo.toml
crates/shape/src/: lib.rs  mesh.rs
crates/source/: Cargo.toml
crates/source/src/: integrator.rs  lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/uldm/: Cargo.toml
crates/uldm/src/: lib.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: app.rs  camera.rs  data.rs  editor.rs  field_slice.rs  gizmo.rs  lib.rs  main.rs  panels.rs  params.rs  pose.rs  presets.rs  scene.rs  scrub.rs
crates/viewer/src/render/: mod.rs
design/: compute.md  generate.md  gravity.md  instrument.md  noise.md  scenario.md  sdk.md  shape.md  source.md  state.md  uldm.md  viewer.md
docs/notes/: ARCHITECTURE.md  README.md  SPEC.md  compute-split.md  demo.py  forward.py  gradar.md  identifiability-and-shape.md  multi-interferometer-localisation.md  rigid-body-rotation.md  test-cases-and-physics.md
milestones/: M0-scaffolding.md  M1-physics-spine.md  M10-mesh-import.md  M2-motion-and-shape.md  M3-detector-array.md  M4-rotation.md  M5-channels-and-decomposition.md  M6-compute-gpu-and-batch.md  M7-sdk-python-torch.md  M8-analysis-crb.md  M9-viewer.md  reference-port.md
python/: README.md
python/tests/: conftest.py  test_bundle.py  test_errors.py  test_fidelity.py  test_placeholder.py  test_stream.py
scripts/: view.sh
