[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
# Default features: Vulkan is enabled by default on Linux (CI lavapipe), Metal on macOS; WGSL frontend on.
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
# The bundle's serialisation contract: serde derive + a compact binary sink.
serde = { version = "1", features = ["derive"] }
bincode = "1"
