[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
# Default features: Vulkan is enabled by default on Linux (CI lavapipe), Metal on macOS; WGSL frontend on.
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
# The bundle's serialisation contract: serde derive + a compact binary sink.
serde = { version = "1", features = ["derive"] }
bincode = "1"
# The viewer's GUI stack. eframe's wgpu backend resolves to the same wgpu 22 as compute (one graphics
# stack); default features are OFF to keep the glow backend out of the graph. egui_plot tracks egui.
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
egui = "0.29"
egui_plot = "0.29"
# Mesh-format parsers (M10) — a file format is not the physics, so a vetted crate parses each. Optional
# and feature-gated in `shape` so the core engine builds without them. Verified maintained on crates.io
# (Jul 2026): stl_io 0.11 (Mar 2026), tobj 4.0 (Jun 2026), gltf 1.4 (stable).
stl_io = "0.11"
tobj = "4.0"
gltf = "1.4"
