[package]
name = "generate"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
scenario = { path = "../scenario" }
instrument = { path = "../instrument" }
gravity = { path = "../gravity" }
compute = { path = "../compute" }
state = { path = "../state" }
noise = { path = "../noise" }
uldm = { path = "../uldm" }

# Test-only: the independent oracle (anchors) and the voxeliser (building anchor clouds).
# Keeps `reference` out of the shipped forward-model graph while letting the tests compare both sides.
[dev-dependencies]
reference = { path = "../reference" }
shape = { path = "../shape" }
