[package]
name = "viewer"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "viewer"
path = "src/main.rs"

[dependencies]
generate = { path = "../generate" }
state = { path = "../state" }
gravity = { path = "../gravity" }
# The sample scenario voxelises a cuboid so the body reads as a filled voxel grid.
shape = { path = "../shape" }
# One graphics stack: the same wgpu 22 compute uses; eframe's wgpu backend resolves to it.
wgpu = { workspace = true }
bytemuck = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }

[dev-dependencies]
# The headless render test acquires a device via compute's shared context; math for pose references.
compute = { path = "../compute" }
math = { path = "../math" }
